# very-simple-rag

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml  very_simple_rag.spec
app/: very_simple_rag.py
app/hooks/: hook-llama_cpp.py
