[project]
name = "very_simple_rag"
version = "0.1.0"
description = "Simple RAG that works stand-alone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.9.0",
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.10.6",
    "huggingface-hub>=0.31.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-huggingface>=0.2.0",
    "llama-cpp-python>=0.3.9",
    "logging>=0.4.9.6",
    "pyinstaller>=6.14.1",
    "pymupdf>=1.26.3",
    "pyperclip>=1.9.0",
    "sentence-transformers>=5.0.0",
]

[project.optional-dependencies]
cpu = ["torch==2.7.1"]
cuda = ["torch==2.7.1"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda", extra = "cuda" },
]

[tool.uv]
conflicts = [[
    { extra = "cpu" },
    { extra = "cuda" }
]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
